debut test implement

--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Resultats - {{ tournoi_name }}{% endblock %}
+{% block title %}Resultats - {{ data.tournoi_name }}{% endblock %}
 
 {% block body %}
     
